tagged-entry: Fix missing GResource when using static library

gcc seems to be stripping away the "unused"
gd_tagged_entry_get_resource() when linking it. Call the function to
avoid the function being stripped away.

See https://bugzilla.gnome.org/show_bug.cgi?id=770121

https://bugzilla.gnome.org/show_bug.cgi?id=770555